--- a/app/assets/scss/layout/_main.scss
+++ b/app/assets/scss/layout/_main.scss
@@ -77,6 +77,7 @@ body {
 
 .container {
   width: 100%;
+  max-width: 864px;
   margin: 0 auto;
   display: flex;
   flex-direction: row;
@@ -115,126 +116,14 @@ body {
   max-width: 100%;
 }
 
-.left {
-  order: 0;
-  flex: 0 1 25%;
-  align-self: stretch;
-  padding: 20px 20px 0px 20px;
-  background-color: #fafafa;
-  border: 1px solid #eee;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  justify-content: flex-start;
-  align-content: flex-start;
-  align-items: flex-start; 
-    .left-flex-child {
-    flex: 0 1 auto;
-    align-self: flex-end;
-  }
-  .title-box {
-    max-width: 250px;
-    width: 100%;
-    h1 {
-      margin-top: 0;
-    }
-    .intro {
-      font-size: 1em;
-      line-height: 1.7em;
-      .intro-image {
-        margin-left: auto;
-        margin-right: auto;
-        margin-bottom: 10px;
-        display: block;
-        width: 100%;
-        max-width: 150px;
-        img {
-          width: 100%;
-          max-width: 150px;
-          border-radius: 75px;
-          border: 1px solid #eee;
-        }
-      }
-      h1 {
-        margin: 0;
-        padding: 15px;
-        font-size: 1.75em;
-        text-align: center;
-        a {
-          color: #2C2321;
-          &:hover {
-            text-decoration: none;
-          }
-        }
-      }
-    }
-  }
-  .widget {
-    margin: 15px 0;
-    line-height: 1.7em;
-    max-width: 250px;
-    width: 100%;
-    h3 {
-      margin-bottom: 3px;
-      color: #666;
-      font-weight: 600;
-      font-size: 14px;
-    }
-    #sidebar-quote {
-      font-style: italic;
-    }   
-    .menu-primary-container {
-      display: block;
-      ul#menu-primary.menu {
-        margin: 0 auto;
-        padding-left: 0;
-        list-style: none;
-      }
-    }
-    ul {
-      margin: 0 auto;
-      padding-left: 0;
-      list-style: none;
-    }
-    .meta-pills {
-      list-style: none;
-      padding-left: 0em;
-    }
-    .pb-link {
-      color: #1C2321;
-      .pb-small {
-        width: 14px;
-        height: 14px;
-        position:relative;
-        filter: grayscale(100%);
-        top: 1px;
-      }
-    }
-  }
-  .searchform {
-    div {
-      input {
-        display: block;
-        padding: 5px;
-        margin-top: 12px;
-        width: 100%;
-      }
-      label {
-        display: none;
-      }
-    }
-  }
-}
-
-.right {
+.column {
   order: 1;
-  flex: 0 1 75%;
+  flex: 0 1 100%;
   align-self: stretch;
-  padding-top: 20px;
   margin: 0 12px;
   padding-left: env(safe-area-inset-left);
   padding-right: env(safe-area-inset-right);
-  .right-wrapper {
+  .column-wrapper {
     max-width: 875px;   
     h1.page-title {
       margin-top: 0;
@@ -245,10 +134,25 @@ body {
           margin-bottom: 0;
         }
       }
+      margin-bottom: 40px;
     }
 
-    article {
+    article.post {
       margin-top: 40px;
+      h1 {
+        font-size: 1.75em;
+      }
+    }
+
+    article.post-single {
+      h1 {
+        font-size: 3em;
+        text-align: center;
+      }
+    }
+
+    article.post,
+    article.post-single {
       margin-bottom: 40px;
 
       .slim-entry {
@@ -297,17 +201,22 @@ body {
         }
       }
       h1 {
-        margin: 0 0 5px 0;
+        margin: 0 0 20px 0;
         line-height: 1.25em;
         a {
           color: #1C2321;
+          &:hover {
+            text-decoration: none;
+          }
         }
       }
       .post-image {
+        position: relative;
+        left: calc(-40vw + 50%);
+        width: 80vw;
+        margin: 0 0 20px 0;
         img {
-          width: 100%;
-          max-width: 750px;
-          margin-bottom: 10px;
+          max-width: 100%;
           height: auto;
         }
       }
@@ -650,7 +559,7 @@ body {
     margin-top: 4rem;
   }
 }
-.mobile-header {
+.menu-bar-header {
   padding-top: 12px;
   padding-bottom: 12px;
   padding-left: env(safe-area-inset-left);
@@ -677,49 +586,54 @@ body {
   -ms-flex-align: center;
   align-items: center;
   border-bottom: 1px solid #f5f5f5;
-  .mobile-title {
-    -webkit-order: 0;
-    -ms-flex-order: 0;
-    order: 0;
-    -webkit-flex: 0 1 auto;
-    -ms-flex: 0 1 auto;
-    flex: 0 1 auto;
-    -webkit-align-self: center;
-    -ms-flex-item-align: center;
-    align-self: center;
-    font-weight: bold;
-    font-size: 1.25em;
-    padding-left: env(safe-area-inset-left);
-    padding-bottom: 12px;
-  }
-  .mobile-menu {
-    -webkit-order: 0;
-    -ms-flex-order: 0;
-    order: 0;
-    -webkit-flex: 0 1 auto;
-    -ms-flex: 0 1 auto;
-    flex: 2 1 auto;
-    -webkit-align-self: center;
-    -ms-flex-item-align: center;
-    align-self: center;
-    padding-right: env(safe-area-inset-left);
-    .menu-primary-container {
-      ul#menu-primary.menu {
-        list-style-type: none;
-        margin: 0;
-        padding: 0;
-        overflow: hidden;
-        order: reverse;
-        float: right;
-        li {
+  .container {
+    .menu-bar-title {
+      -webkit-order: 0;
+      -ms-flex-order: 0;
+      order: 0;
+      -webkit-flex: 0 1 auto;
+      -ms-flex: 0 1 auto;
+      flex: 0 1 auto;
+      -webkit-align-self: center;
+      -ms-flex-item-align: center;
+      align-self: center;
+      font-weight: bold;
+      font-size: 1em;
+      padding-left: env(safe-area-inset-left);
+      padding-left: 12px;
+    }
+    .menu-bar-menu {
+      -webkit-order: 0;
+      -ms-flex-order: 0;
+      order: 0;
+      -webkit-flex: 0 1 auto;
+      -ms-flex: 0 1 auto;
+      flex: 2 1 auto;
+      -webkit-align-self: center;
+      -ms-flex-item-align: center;
+      align-self: center;
+      padding-right: env(safe-area-inset-left);
+      padding-right: 12px;
+      font-size: 16px;
+      .menu-primary-container {
+        ul#menu-primary.menu {
+          list-style-type: none;
+          margin: 0;
+          padding: 0;
+          overflow: hidden;
+          order: reverse;
           float: right;
-          a {
-            display: block;
-            text-align: center;
-            padding: 0 5px;
+          li {
+            display: inline-block;
+            a {
+              display: block;
+              text-align: center;
+              padding: 0 5px;
+            }
           }
         }
       }
     }
   }
+
 }
