--- a/app/assets/scss/layout/_main.scss
+++ b/app/assets/scss/layout/_main.scss
@@ -14,7 +14,7 @@ html {
                "Helvetica Neue",
                sans-serif; 
   // font-size: 14px;
-  font-size: 16px;
+  font-size: 17px;
   font-weight: 400;
   color: #4C5B61;
 }
@@ -77,7 +77,7 @@ body {
 
 .container {
   width: 100%;
-  max-width: 864px;
+  max-width: 1020px;
   margin: 0 auto;
   display: flex;
   flex-direction: row;
@@ -124,7 +124,7 @@ body {
   padding-left: env(safe-area-inset-left);
   padding-right: env(safe-area-inset-right);
   .column-wrapper {
-    max-width: 875px;   
+    max-width: 1020px;   
     h1.page-title {
       margin-top: 0;
     } 
@@ -201,7 +201,7 @@ body {
         }
       }
       h1 {
-        margin: 0 0 20px 0;
+        margin: 0 0 10px 0;
         line-height: 1.25em;
         a {
           color: #1C2321;
@@ -211,9 +211,6 @@ body {
         }
       }
       .post-image {
-        position: relative;
-        left: calc(-40vw + 50%);
-        width: 80vw;
         margin: 0 0 20px 0;
         img {
           max-width: 100%;
@@ -221,9 +218,9 @@ body {
         }
       }
       .meta {
-        color: #bbb;
-        font-size: 1em;
-        margin-top: 20px;
+        color: #555;
+        font-size: 0.85em;
+        margin-bottom: 20px;
         .meta-child {
           display: inline-block;
           time {
@@ -236,24 +233,6 @@ body {
             color: #D64933;
             border-radius: 10px;
             padding: 2px 9px;
-          }
-        }
-        .meta-comments-link,
-        .meta-category-link,
-        .meta-permalink-link {
-          a {
-            background-color: white;
-            color: #D64933;
-            border-radius: 10px;
-            transition-duration: 500ms;
-            padding: 2px 9px;
-
-            &:hover {
-              text-decoration: none;
-              transition-duration: 500ms;
-              background-color: #D64933;
-              color: white;
-            }
           }
         }
       }
@@ -350,114 +329,69 @@ body {
           }
         }
       }
-      > table {
-        border-spacing: 0px;
-        border-collapse: collapse;
-        width: 100%;
-        max-width: 100%;
-        margin-bottom: 15px;
-        background-color: transparent;
-        text-align: left;
-        border-left: 1px solid #eee;
-        border-right: 1px solid #eee;
-        th {
-          font-weight: bold;
-          border: 1px solid #eee;
-          padding: 8px;
-        }
-        td {
-          border: 1px solid #eee;
-          padding: 8px;
-        }
-        tr {
-          background-color: transparent;
-          &:nth-of-type(2n+1) {
-            background-color: #fafafa;
-          }
-          th {
-            background-color: #f0f0f0;
-          }
-          border-top: 1px solid #eee;
-          border-bottom: 1px solid #eee;
-        }
-        th, td {
-          border: none;
-        }
-      }
-      
-      hr {
-        margin: 20px auto;
-        width: 100%;
-        background-color: #eee;
-        height: 1px;
-        border: 0;
-      }
-      pre {
-        border-radius: 2px;
-        white-space: pre-wrap;
-        line-break: strict;
-        code {
-          font-size: 0.95em;
-        }
-      }
-      line-height: 1.7em;
-      p {
-        &:first-of-type {
-          margin-top: 0;
-        }
-
-        line-height: 1.7em;
-        img {
+      .the-content {
+        margin-right: 33%;
+        > table {
+          border-spacing: 0px;
+          border-collapse: collapse;
+          width: 100%;
           max-width: 100%;
-          height: auto;
+          margin-bottom: 15px;
+          background-color: transparent;
+          text-align: left;
+          border-left: 1px solid #eee;
+          border-right: 1px solid #eee;
+          th {
+            font-weight: bold;
+            border: 1px solid #eee;
+            padding: 8px;
+          }
+          td {
+            border: 1px solid #eee;
+            padding: 8px;
+          }
+          tr {
+            background-color: transparent;
+            &:nth-of-type(2n+1) {
+              background-color: #fafafa;
+            }
+            th {
+              background-color: #f0f0f0;
+            }
+            border-top: 1px solid #eee;
+            border-bottom: 1px solid #eee;
+          }
+          th, td {
+            border: none;
+          }
         }
-        code {
-          background-color: #f5f5f5;
-          border: 1px solid #e0e0e0;
+        
+        hr {
+          margin: 20px auto;
+          width: 100%;
+          background-color: #eee;
+          height: 1px;
+          border: 0;
+        }
+        pre {
           border-radius: 2px;
-          padding: 2px;
-          font-size: 0.95em;
+          white-space: pre-wrap;
+          line-break: strict;
+          code {
+            font-size: 0.95em;
+          }
         }
-      }
-      iframe,
-      video {
-        width: 100%;
-        max-width: 750px;
-      }
-      blockquote {
-        margin: 0 0.5em;
-        background-color: #fafafa;
-        border: 1px solid #f5f5f5;
-        padding: 0.5em 1em;
-        p:first-child:before {
-          font-family: "Font Awesome 5 Pro";
-          content: "\f10d";
-          color: #D64933;
-          font-size: 16px;
-          padding-top: 0px;
-          padding-right: 5px;
-          margin: 0em;
-          font-style: normal;
-        }
-        p:last-child:after {
-          font-family: "Font Awesome 5 Pro";
-          content: "\f10e";
-          color: #D64933;
-          font-size: 16px;
-          padding-top: 0px;
-          padding-left: 5px;
-          margin: 0em;
-          font-style: normal;
-        }
+        line-height: 1.7em;
         p {
-          font-style: italic;
-        }
-      }
-      ol,ul {
-        padding-left: 1.3em;
-        li {
-          margin-bottom: 0.25em;
+          &:first-of-type {
+            margin-top: 0;
+          }
+
           line-height: 1.7em;
+          img {
+            max-width: 100%;
+            height: auto;
+          }
           code {
             background-color: #f5f5f5;
             border: 1px solid #e0e0e0;
@@ -466,20 +400,71 @@ body {
             font-size: 0.95em;
           }
         }
-      }
-      section.footnotes {
-        ol.footnotes-list {
+        iframe,
+        video {
+          width: 100%;
+          max-width: 750px;
+        }
+        blockquote {
+          margin: 0 0.5em;
+          background-color: #fafafa;
+          border: 1px solid #f5f5f5;
+          padding: 0.5em 1em;
+          p:first-child:before {
+            font-family: "Font Awesome 5 Pro";
+            content: "\f10d";
+            color: #D64933;
+            font-size: 16px;
+            padding-top: 0px;
+            padding-right: 5px;
+            margin: 0em;
+            font-style: normal;
+          }
+          p:last-child:after {
+            font-family: "Font Awesome 5 Pro";
+            content: "\f10e";
+            color: #D64933;
+            font-size: 16px;
+            padding-top: 0px;
+            padding-left: 5px;
+            margin: 0em;
+            font-style: normal;
+          }
+          p {
+            font-style: italic;
+          }
+        }
+        ol,ul {
           padding-left: 1.3em;
           li {
-            p {
-              margin: 0;
-              line-height: 1.4;
+            margin-bottom: 0.25em;
+            line-height: 1.7em;
+            code {
+              background-color: #f5f5f5;
+              border: 1px solid #e0e0e0;
+              border-radius: 2px;
+              padding: 2px;
+              font-size: 0.95em;
+            }
+          }
+        }
+        section.footnotes {
+          ol.footnotes-list {
+            padding-left: 1.3em;
+            li {
+              p {
+                margin: 0;
+                line-height: 1.4;
+              }
             }
           }
         }
       }
     }
-    hr {
+    > hr:first-of-type {
+      display: none;
+    }
+    > hr {
       margin-top: 0px;
       margin-bottom: 40px;
       background-color: #eee;
@@ -548,6 +533,43 @@ body {
         -ms-flex-item-align: center;
         align-self: center;
         text-align: right;
+      }
+    }
+
+    div.aside-breaker {
+      margin-bottom: 40px;
+      border-top: 1px solid #3F88C5;
+      border-bottom: 1px solid #3F88C5;
+      padding-bottom: 20px;
+      h4, a {
+        color: #3F88C5;
+      }
+      ul.aside-breaker__list {
+        margin-top: 0;
+        list-style: none;
+        padding-left: 0em;
+        -webkit-columns: 2 380px;
+        -moz-columns: 2 380px;
+        columns: 2 380px;
+        -webkit-column-gap: 3rem;
+        -moz-column-gap: 3rem;
+        column-gap: 3rem;
+        vertical-align: top;
+        li.aside-breaker__list-item {
+          padding-top: 20px;
+          -webkit-margin-before: 0;
+          -webkit-margin-after: 0;
+          display: inline-block;
+          span.aside-breaker__list-item__datestamp {
+            font-size: .85rem;
+            color: #aaa;
+            margin-bottom: 0px;
+          }
+         & > p {
+          margin: 0;
+          line-height: 1.7em;
+          }
+        }
       }
     }
   }
