--- a/app/assets/scss/layout/_main.scss
+++ b/app/assets/scss/layout/_main.scss
@@ -134,7 +134,7 @@ body {
           margin-bottom: 0;
         }
       }
-      margin-bottom: 40px;
+      margin-bottom: 80px;
     }
 
     article.post {
@@ -152,8 +152,160 @@ body {
     }
 
     article.post,
+    article.post-single,
+    article.aside {
+      .article-body {
+        flex: 0 2 auto;
+        display: flex;
+        flex-direction: row;
+        .article-meta {
+          order: 0;
+          flex: 0 1 25%;
+          align-self: auto;
+          span.meta-child {
+            display: block;
+          }
+        }
+        .article-content {
+          order: 0;
+          flex: 0 2 75%;
+          align-self: auto;
+          > table {
+            border-spacing: 0px;
+            border-collapse: collapse;
+            width: 100%;
+            max-width: 100%;
+            margin-bottom: 15px;
+            background-color: transparent;
+            text-align: left;
+            border-left: 1px solid #eee;
+            border-right: 1px solid #eee;
+            th {
+              font-weight: bold;
+              border: 1px solid #eee;
+              padding: 8px;
+            }
+            td {
+              border: 1px solid #eee;
+              padding: 8px;
+            }
+            tr {
+              background-color: transparent;
+              &:nth-of-type(2n+1) {
+                background-color: #fafafa;
+              }
+              th {
+                background-color: #f0f0f0;
+              }
+              border-top: 1px solid #eee;
+              border-bottom: 1px solid #eee;
+            }
+            th, td {
+              border: none;
+            }
+          }
+          
+          hr {
+            margin: 20px auto;
+            width: 100%;
+            background-color: #eee;
+            height: 1px;
+            border: 0;
+          }
+          pre {
+            border-radius: 2px;
+            white-space: pre-wrap;
+            line-break: strict;
+            code {
+              font-size: 0.95em;
+            }
+          }
+          line-height: 1.7em;
+          p {
+            &:first-of-type {
+              margin-top: 0;
+            }
+  
+            line-height: 1.7em;
+            img {
+              max-width: 100%;
+              height: auto;
+            }
+            code {
+              background-color: #f5f5f5;
+              border: 1px solid #e0e0e0;
+              border-radius: 2px;
+              padding: 2px;
+              font-size: 0.95em;
+            }
+          }
+          iframe,
+          video {
+            width: 100%;
+            max-width: 750px;
+          }
+          blockquote {
+            margin: 0 0.5em;
+            background-color: #fafafa;
+            border: 1px solid #f5f5f5;
+            padding: 0.5em 1em;
+            p:first-child:before {
+              font-family: "Font Awesome 5 Pro";
+              content: "\f10d";
+              color: #D64933;
+              font-size: 16px;
+              padding-top: 0px;
+              padding-right: 5px;
+              margin: 0em;
+              font-style: normal;
+            }
+            p:last-child:after {
+              font-family: "Font Awesome 5 Pro";
+              content: "\f10e";
+              color: #D64933;
+              font-size: 16px;
+              padding-top: 0px;
+              padding-left: 5px;
+              margin: 0em;
+              font-style: normal;
+            }
+            p {
+              font-style: italic;
+            }
+          }
+          ol,ul {
+            padding-left: 1.3em;
+            li {
+              margin-bottom: 0.25em;
+              line-height: 1.7em;
+              code {
+                background-color: #f5f5f5;
+                border: 1px solid #e0e0e0;
+                border-radius: 2px;
+                padding: 2px;
+                font-size: 0.95em;
+              }
+            }
+          }
+          section.footnotes {
+            ol.footnotes-list {
+              padding-left: 1.3em;
+              li {
+                p {
+                  margin: 0;
+                  line-height: 1.4;
+                }
+              }
+            }
+          }
+        }
+      }
+      
+    }
+
+    article.post,
     article.post-single {
-      margin-bottom: 40px;
+      margin-bottom: 80px;
 
       .slim-entry {
         display: -ms-flexbox;
@@ -329,140 +481,7 @@ body {
           }
         }
       }
-      .the-content {
-        margin-right: 33%;
-        > table {
-          border-spacing: 0px;
-          border-collapse: collapse;
-          width: 100%;
-          max-width: 100%;
-          margin-bottom: 15px;
-          background-color: transparent;
-          text-align: left;
-          border-left: 1px solid #eee;
-          border-right: 1px solid #eee;
-          th {
-            font-weight: bold;
-            border: 1px solid #eee;
-            padding: 8px;
-          }
-          td {
-            border: 1px solid #eee;
-            padding: 8px;
-          }
-          tr {
-            background-color: transparent;
-            &:nth-of-type(2n+1) {
-              background-color: #fafafa;
-            }
-            th {
-              background-color: #f0f0f0;
-            }
-            border-top: 1px solid #eee;
-            border-bottom: 1px solid #eee;
-          }
-          th, td {
-            border: none;
-          }
-        }
-        
-        hr {
-          margin: 20px auto;
-          width: 100%;
-          background-color: #eee;
-          height: 1px;
-          border: 0;
-        }
-        pre {
-          border-radius: 2px;
-          white-space: pre-wrap;
-          line-break: strict;
-          code {
-            font-size: 0.95em;
-          }
-        }
-        line-height: 1.7em;
-        p {
-          &:first-of-type {
-            margin-top: 0;
-          }
-
-          line-height: 1.7em;
-          img {
-            max-width: 100%;
-            height: auto;
-          }
-          code {
-            background-color: #f5f5f5;
-            border: 1px solid #e0e0e0;
-            border-radius: 2px;
-            padding: 2px;
-            font-size: 0.95em;
-          }
-        }
-        iframe,
-        video {
-          width: 100%;
-          max-width: 750px;
-        }
-        blockquote {
-          margin: 0 0.5em;
-          background-color: #fafafa;
-          border: 1px solid #f5f5f5;
-          padding: 0.5em 1em;
-          p:first-child:before {
-            font-family: "Font Awesome 5 Pro";
-            content: "\f10d";
-            color: #D64933;
-            font-size: 16px;
-            padding-top: 0px;
-            padding-right: 5px;
-            margin: 0em;
-            font-style: normal;
-          }
-          p:last-child:after {
-            font-family: "Font Awesome 5 Pro";
-            content: "\f10e";
-            color: #D64933;
-            font-size: 16px;
-            padding-top: 0px;
-            padding-left: 5px;
-            margin: 0em;
-            font-style: normal;
-          }
-          p {
-            font-style: italic;
-          }
-        }
-        ol,ul {
-          padding-left: 1.3em;
-          li {
-            margin-bottom: 0.25em;
-            line-height: 1.7em;
-            code {
-              background-color: #f5f5f5;
-              border: 1px solid #e0e0e0;
-              border-radius: 2px;
-              padding: 2px;
-              font-size: 0.95em;
-            }
-          }
-        }
-        section.footnotes {
-          ol.footnotes-list {
-            padding-left: 1.3em;
-            li {
-              p {
-                margin: 0;
-                line-height: 1.4;
-              }
-            }
-          }
-        }
-      }
-    }
-    > hr:first-of-type {
-      display: none;
+      
     }
     > hr {
       margin-top: 0px;
@@ -533,43 +552,6 @@ body {
         -ms-flex-item-align: center;
         align-self: center;
         text-align: right;
-      }
-    }
-
-    div.aside-breaker {
-      margin-bottom: 40px;
-      border-top: 1px solid #3F88C5;
-      border-bottom: 1px solid #3F88C5;
-      padding-bottom: 20px;
-      h4, a {
-        color: #3F88C5;
-      }
-      ul.aside-breaker__list {
-        margin-top: 0;
-        list-style: none;
-        padding-left: 0em;
-        -webkit-columns: 2 380px;
-        -moz-columns: 2 380px;
-        columns: 2 380px;
-        -webkit-column-gap: 3rem;
-        -moz-column-gap: 3rem;
-        column-gap: 3rem;
-        vertical-align: top;
-        li.aside-breaker__list-item {
-          padding-top: 20px;
-          -webkit-margin-before: 0;
-          -webkit-margin-after: 0;
-          display: inline-block;
-          span.aside-breaker__list-item__datestamp {
-            font-size: .85rem;
-            color: #aaa;
-            margin-bottom: 0px;
-          }
-         & > p {
-          margin: 0;
-          line-height: 1.7em;
-          }
-        }
       }
     }
   }
