--- a/app/assets/scss/screen.scss
+++ b/app/assets/scss/screen.scss
@@ -18,4 +18,5 @@
 @import "module/highlightjs/tomorrow_night";
 @import "module/fontawesome/fontawesome";
 @import "module/fontawesome/fa-regular";
+@import "module/fontawesome/fa-light";
 @import "module/fontawesome/fa-brands";
