--- a/app/assets/scss/layout/_main.scss
+++ b/app/assets/scss/layout/_main.scss
@@ -43,6 +43,7 @@ body {
   justify-content: center;
   align-content: center;
   align-items: flex-start;
+
   .site-title {
     margin-left: auto;
     margin-right: auto;
@@ -126,6 +127,7 @@ body {
     article.post-single {
       a, h1>i {
         color: #00CC99 !important;
+        margin-right: 16px;
       }
       .article-content {
         blockquote {
@@ -147,6 +149,7 @@ body {
       h1 {
         font-size: 3em;
         text-align: center;
+        text-indent: 0 !important;
       }
     }
 
@@ -354,6 +357,7 @@ body {
         margin: 0 0 10px 0;
         line-height: 1.25em;
         text-transform: uppercase;
+        text-indent: -24px;
         a {
           color: #1C2321;
           text-decoration: none;
@@ -607,7 +611,6 @@ body {
       font-weight: bold;
       font-size: 1.25rem;
       padding-left: env(safe-area-inset-left);
-      padding-left: 12px;
     }
     .menu-bar-menu {
       -webkit-order: 0;
@@ -619,8 +622,7 @@ body {
       -webkit-align-self: center;
       -ms-flex-item-align: center;
       align-self: center;
-      padding-right: env(safe-area-inset-left);
-      padding-right: 12px;
+      padding-right: env(safe-area-inset-right);
       font-size: 15px;
       div {
         ul.menu {
