--- a/app/assets/scss/layout/_breakpoints.scss
+++ b/app/assets/scss/layout/_breakpoints.scss
@@ -1,3 +1,10 @@
+@media (max-width: 1690px) {
+  .post-image {
+    left: calc(-40vw + 50%) !important;
+    width: 80vw !important;  
+  }
+}
+
 @media (max-width: 1024px) { 
   article {
     .article-body {
