--- a/app/assets/scss/layout/_main.scss
+++ b/app/assets/scss/layout/_main.scss
@@ -10,11 +10,10 @@ html {
   //               "Droid Sans",
   //               "Helvetica Neue", 
   //               sans-serif; 
-  font-family: "Avenir Next",
-               "Helvetica Neue",
+  font-family: "Helvetica Neue",
                sans-serif; 
   // font-size: 14px;
-  font-size: 16px;
+  font-size: 15px;
   font-weight: 400;
   color: #4C5B61;
 }
@@ -117,11 +116,9 @@ body {
 
 .left {
   order: 0;
-  flex: 0 1 25%;
+  flex: 0 1 33%;
   align-self: stretch;
   padding: 20px 20px 0px 20px;
-  background-color: #fafafa;
-  border: 1px solid #eee;
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
@@ -133,7 +130,7 @@ body {
     align-self: flex-end;
   }
   .title-box {
-    max-width: 250px;
+    max-width: 200px;
     width: 100%;
     h1 {
       margin-top: 0;
@@ -172,7 +169,7 @@ body {
   .widget {
     margin: 15px 0;
     line-height: 1.7em;
-    max-width: 250px;
+    max-width: 200px;
     width: 100%;
     h3 {
       margin-bottom: 3px;
@@ -228,14 +225,14 @@ body {
 
 .right {
   order: 1;
-  flex: 0 1 75%;
+  flex: 0 1 67%;
   align-self: stretch;
   padding-top: 20px;
   margin: 0 12px;
   padding-left: env(safe-area-inset-left);
   padding-right: env(safe-area-inset-right);
   .right-wrapper {
-    max-width: 875px;   
+    max-width: 600px;   
     h1.page-title {
       margin-top: 0;
     } 
@@ -313,8 +310,7 @@ body {
       }
       .meta {
         color: #bbb;
-        font-size: 1em;
-        margin-top: 20px;
+        font-size: 0.8rem;
         .meta-child {
           display: inline-block;
           time {
