--- a/app/assets/scss/layout/_main.scss
+++ b/app/assets/scss/layout/_main.scss
@@ -13,9 +13,9 @@ html {
   font-family: "Helvetica Neue",
                sans-serif; 
   // font-size: 14px;
-  font-size: 15px;
+  font-size: 14px;
   font-weight: 400;
-  color: #4C5B61;
+  color: #222;
 }
 
 a {
@@ -116,7 +116,7 @@ body {
 
 .left {
   order: 0;
-  flex: 0 1 33%;
+  flex: 0 1 35%;
   align-self: stretch;
   padding: 20px 20px 0px 20px;
   display: flex;
@@ -137,7 +137,7 @@ body {
     }
     .intro {
       font-size: 1em;
-      line-height: 1.7em;
+      line-height: 1.4em;
       .intro-image {
         margin-left: auto;
         margin-right: auto;
@@ -154,8 +154,11 @@ body {
       }
       h1 {
         margin: 0;
-        padding: 15px;
-        font-size: 1.75em;
+        padding: 4px;
+        font-size: 1.25em;
+        text-transform: uppercase;
+        border: 4px solid #000;
+        display: inline-block;
         text-align: center;
         a {
           color: #2C2321;
@@ -168,7 +171,7 @@ body {
   }
   .widget {
     margin: 15px 0;
-    line-height: 1.7em;
+    line-height: 1.4em;
     max-width: 200px;
     width: 100%;
     h3 {
@@ -225,10 +228,10 @@ body {
 
 .right {
   order: 1;
-  flex: 0 1 67%;
+  flex: 0 1 65%;
   align-self: stretch;
   padding-top: 20px;
-  margin: 0 12px;
+  margin: 0 24px;
   padding-left: env(safe-area-inset-left);
   padding-right: env(safe-area-inset-right);
   .right-wrapper {
@@ -237,16 +240,23 @@ body {
       margin-top: 0;
     } 
     article.aside {
+      background: #fbfbfb;
+      border: solid 1px #ddd;
+      border-radius: 8px;
+      margin: 0 -12px 20px -12px;
+      padding: 12px;
       div {
         p:last-of-type {
           margin-bottom: 0;
         }
       }
+      .meta {
+        margin-bottom: 0;
+      }
     }
 
     article {
-      margin-top: 40px;
-      margin-bottom: 40px;
+      padding-bottom: 40px;
 
       .slim-entry {
         display: -ms-flexbox;
@@ -295,7 +305,7 @@ body {
       }
       h1 {
         margin: 0 0 5px 0;
-        line-height: 1.25em;
+        line-height: 1em;
         a {
           color: #1C2321;
         }
@@ -311,6 +321,7 @@ body {
       .meta {
         color: #bbb;
         font-size: 0.8rem;
+        margin-bottom: 10px;
         .meta-child {
           display: inline-block;
           time {
@@ -318,30 +329,7 @@ body {
               color: #bbb;
             }
           }
-          .word-count {
-            background-color: white;
-            color: #D64933;
-            border-radius: 10px;
-            padding: 2px 9px;
-          }
-        }
-        .meta-comments-link,
-        .meta-category-link,
-        .meta-permalink-link {
-          a {
-            background-color: white;
-            color: #D64933;
-            border-radius: 10px;
-            transition-duration: 500ms;
-            padding: 2px 9px;
-
-            &:hover {
-              text-decoration: none;
-              transition-duration: 500ms;
-              background-color: #D64933;
-              color: white;
-            }
-          }
+          
         }
       }
       .comments,
@@ -487,13 +475,13 @@ body {
           font-size: 0.95em;
         }
       }
-      line-height: 1.7em;
+      line-height: 1.4em;
       p {
         &:first-of-type {
           margin-top: 0;
         }
 
-        line-height: 1.7em;
+        line-height: 1.4em;
         img {
           max-width: 100%;
           height: auto;
@@ -544,7 +532,7 @@ body {
         padding-left: 1.3em;
         li {
           margin-bottom: 0.25em;
-          line-height: 1.7em;
+          line-height: 1.4em;
           code {
             background-color: #f5f5f5;
             border: 1px solid #e0e0e0;
