--- a/app/assets/scss/layout/_main.scss
+++ b/app/assets/scss/layout/_main.scss
@@ -202,13 +202,25 @@ body {
     }
     .pb-link {
       color: #1C2321;
-      .pb-small {
+      .dnsimple-logo {
         width: 14px;
         height: 14px;
         position:relative;
-        filter: grayscale(100%);
         top: 1px;
       }
+      .fa-digital-ocean {
+        color: rgb(22, 131, 251);
+      }
+      .fa-wordpress {
+        color: rgb(33, 117, 155);
+      }
+      .fa-lock-alt {
+        color: rgb(45, 61 ,104);
+      }
+      .fa-font-awesome-flag {
+        color: rgb(43 ,140, 227)
+      }
+
     }
   }
   .searchform {
