--- a/app/assets/scss/screen.scss
+++ b/app/assets/scss/screen.scss
@@ -19,3 +19,4 @@
 @import "module/fontawesome/fontawesome";
 @import "module/fontawesome/fa-regular";
 @import "module/fontawesome/fa-brands";
+@import "module/alerts";
