--- a/app/assets/scss/layout/_breakpoints.scss
+++ b/app/assets/scss/layout/_breakpoints.scss
@@ -20,12 +20,38 @@
   .right {
     padding-top: 20px;
   }
+  .container {
+    padding-left: env(safe-area-inset-left);
+    padding-right: env(safe-area-inset-right);
+    padding: 0 12px;
+  }
+  .header {
+    display: none;
+  }
   
 }
 @media (max-width: 660px) {
   .mobile-header {
     flex-direction: column;
     height: auto;
+    display: flex;
+    .column-1 {
+      display: flex;
+      flex-direction: column;
+      .mobile-title {
+        justify-content: center;
+        align-content: center;
+        align-items: flex-start;
+        align-self: center;
+        h1 {
+          margin: 0 auto;
+        }
+      }
+    }
+    .column-2 {
+      order: 1;
+      flex: 0 1 auto;
+    }
   }
   article.post {
     h1,
