--- a/app/assets/scss/layout/_main.scss
+++ b/app/assets/scss/layout/_main.scss
@@ -13,13 +13,13 @@ html {
   font-family: "Helvetica Neue",
                sans-serif; 
   // font-size: 14px;
-  font-size: 14px;
+  font-size: 13px;
   font-weight: 400;
   color: #222;
 }
 
 a {
-  color: #D64933;
+  color: #335C81;
   text-decoration: none;
 }
 
@@ -44,7 +44,7 @@ body {
 // }
 
 .bar {
-  border-top: 4px solid #D64933;
+  border-top: 4px solid #335C81;
   height:1px;
 }
 
@@ -75,7 +75,7 @@ body {
 }
 
 .container {
-  width: 100%;
+  max-width: 740px;
   margin: 0 auto;
   display: flex;
   flex-direction: row;
@@ -83,42 +83,45 @@ body {
   justify-content: center;
   align-content: center;
   align-items: flex-start;
-  .site-title {
-    margin-left: auto;
-    margin-right: auto;
-    width: 100%;
-    h1 {
-      margin: 0;
-      padding: 15px;
-      font-size: 1.5em;
-      a {
-        color: #1C2321;
-        &:hover {
-          text-decoration: none;
+  .header,
+  .footer {
+    order: 0;
+    flex: 0 1 auto;
+    margin: 45px auto 30px auto;
+    .site-title {
+      margin-left: auto;
+      margin-right: auto;
+      width: 100%;
+      h1 {
+        margin: 0;
+        padding: 6px;
+        font-size: 1.25em;
+        text-transform: uppercase;
+        border: 5px solid #335C81;
+        display: inline-block;
+        text-align: center;
+        color: #335C81;
+        a {
+          color: #335C81;
+          &:hover {
+            text-decoration: none;
+          }
         }
       }
+    }
+    .footer-text {
+      text-align: center;
+      font-size: 12px;
     }
   }
 }
 
-.boxed,
-.fluid {
-  padding: 0 20px;
-}
-
-.boxed {
-  max-width: 960px;
-}
-
-.fluid {
-  max-width: 100%;
-}
-
 .left {
   order: 0;
-  flex: 0 1 35%;
+  flex: 1 0 180px;
   align-self: stretch;
-  padding: 20px 20px 0px 20px;
+  padding: 0;
+  margin-right:50px;
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
@@ -128,6 +131,28 @@ body {
     .left-flex-child {
     flex: 0 1 auto;
     align-self: flex-end;
+    .custom-html-widget {
+      div#mc_embed_signup {
+        text-align: center;
+        border: 1px solid #aaa;
+        background-color: #eee;
+        padding: 10px;
+        #mc_embed_signup_scroll {
+          .email {
+            padding: 5px;
+            border: 1px solid #335C81;
+            width: 146px;
+            margin-bottom: 5px;
+          }
+          .button {
+            border: 1px solid #335C81;
+            background-color: #335C81;
+            padding: 5px;
+            color: white;
+          }
+        }
+      }
+    }
   }
   .title-box {
     max-width: 200px;
@@ -154,14 +179,15 @@ body {
       }
       h1 {
         margin: 0;
-        padding: 4px;
+        padding: 6px;
         font-size: 1.25em;
         text-transform: uppercase;
-        border: 4px solid #000;
+        border: 5px solid #335C81;
         display: inline-block;
         text-align: center;
+        color: #335C81;
         a {
-          color: #2C2321;
+          color: #335C81;
           &:hover {
             text-decoration: none;
           }
@@ -172,8 +198,9 @@ body {
   .widget {
     margin: 15px 0;
     line-height: 1.4em;
-    max-width: 200px;
+    max-width: 180px;
     width: 100%;
+    text-align: right;
     h3 {
       margin-bottom: 3px;
       color: #666;
@@ -185,6 +212,7 @@ body {
     }   
     .menu-primary-container {
       display: block;
+      text-align: right;
       ul#menu-primary.menu {
         margin: 0 auto;
         padding-left: 0;
@@ -195,32 +223,6 @@ body {
       margin: 0 auto;
       padding-left: 0;
       list-style: none;
-    }
-    .meta-pills {
-      list-style: none;
-      padding-left: 0em;
-    }
-    .pb-link {
-      color: #1C2321;
-      .dnsimple-logo {
-        width: 14px;
-        height: 14px;
-        position:relative;
-        top: 1px;
-      }
-      .fa-digital-ocean {
-        color: rgb(22, 131, 251);
-      }
-      .fa-wordpress {
-        color: rgb(33, 117, 155);
-      }
-      .fa-lock-alt {
-        color: rgb(45, 61 ,104);
-      }
-      .fa-font-awesome-flag {
-        color: rgb(43 ,140, 227)
-      }
-
     }
   }
   .searchform {
@@ -236,18 +238,19 @@ body {
       }
     }
   }
+  .widget_text {
+    text-align: right;
+  }
 }
 
 .right {
   order: 1;
-  flex: 0 1 65%;
+  flex: 0 1 75%;
   align-self: stretch;
-  padding-top: 20px;
-  margin: 0 24px;
+  padding-top: 15px;
   padding-left: env(safe-area-inset-left);
   padding-right: env(safe-area-inset-right);
   .right-wrapper {
-    max-width: 600px;   
     h1.page-title {
       margin-top: 0;
     } 
@@ -266,9 +269,11 @@ body {
         margin-bottom: 0;
       }
     }
-
+    article.in-the-loop {
+      padding-bottom: 60px;
+    }
     article {
-      padding-bottom: 40px;
+      padding-bottom: 10px;
 
       .slim-entry {
         display: -ms-flexbox;
@@ -493,7 +498,7 @@ body {
           margin-top: 0;
         }
 
-        line-height: 1.4em;
+        line-height: 1.8em;
         img {
           max-width: 100%;
           height: auto;
@@ -519,7 +524,7 @@ body {
         p:first-child:before {
           font-family: "Font Awesome 5 Pro";
           content: "\f10d";
-          color: #D64933;
+          color: #335C81;
           font-size: 16px;
           padding-top: 0px;
           padding-right: 5px;
@@ -529,7 +534,7 @@ body {
         p:last-child:after {
           font-family: "Font Awesome 5 Pro";
           content: "\f10e";
-          color: #D64933;
+          color: #335C81;
           font-size: 16px;
           padding-top: 0px;
           padding-left: 5px;
@@ -538,6 +543,7 @@ body {
         }
         p {
           font-style: italic;
+          margin-bottom: 0;
         }
       }
       ol,ul {
@@ -566,6 +572,36 @@ body {
         }
       }
     }
+
+    div.after-post-widgets {
+      padding-bottom: 20px;
+      line-height: 1.4;
+      .apw-widget {
+        border: 1px solid #aaa;
+        padding: 7px 20px 20px 20px;
+        background-color: #eee;
+        .custom-html-widget {
+          div#mc_embed_signup {
+            text-align: center;
+            #mc_embed_signup_scroll {
+              .email {
+                padding: 5px;
+                border: 1px solid #335C81;
+                width: 200px;
+                margin: 1em;
+              }
+              .button {
+                border: 1px solid #335C81;
+                background-color: #335C81;
+                padding: 5px;
+                color: white;
+              }
+            }
+          }
+        }
+      }
+    }
+    
     hr {
       margin-top: 0px;
       margin-bottom: 40px;
@@ -581,58 +617,27 @@ body {
       font-style: italic;
     }
     div.pagination {
-      display: -ms-flexbox;
-      display: -webkit-flex;
       display: flex;
-      -webkit-flex-direction: row;
-      -ms-flex-direction: row;
       flex-direction: row;
-      -webkit-flex-wrap: nowrap;
-      -ms-flex-wrap: nowrap;
       flex-wrap: nowrap;
-      -webkit-justify-content: center;
-      -ms-flex-pack: center;
       justify-content: center;
-      -webkit-align-content: space-between;
-      -ms-flex-line-pack: justify;
       align-content: space-between;
-      -webkit-align-items: center;
-      -ms-flex-align: center;
       align-items: center;
-      margin-bottom: 100px;
       .later {
-        -webkit-order: 0;
-        -ms-flex-order: 0;
         order: 0;
-        -webkit-flex: 1 0 33%;
-        -ms-flex: 1 0 33%;
         flex: 1 0 33%;
-        -webkit-align-self: center;
-        -ms-flex-item-align: center;
         align-self: center;
         text-align: left;
       }
       .count {
-        -webkit-order: 0;
-        -ms-flex-order: 0;
         order: 0;
-        -webkit-flex: 3 0 33%;
-        -ms-flex: 3 0 33%;
         flex: 1 0 33%;
-        -webkit-align-self: center;
-        -ms-flex-item-align: center;
         align-self: center;
         text-align: center;
       }
       .earlier {
-        -webkit-order: 0;
-        -ms-flex-order: 0;
         order: 0;
-        -webkit-flex: 1 0 33%;
-        -ms-flex: 1 0 33%;
         flex: 1 0 33%;
-        -webkit-align-self: center;
-        -ms-flex-item-align: center;
         align-self: center;
         text-align: right;
       }
@@ -653,68 +658,71 @@ body {
   padding-right: env(safe-area-inset-right);
   padding-left: 12px;
   padding-right: 12px;
-  height: 50px;
-  display: -ms-flexbox;
-  display: -webkit-flex;
+  min-height: 50px;
   display: flex;
-  -webkit-flex-direction: row;
-  -ms-flex-direction: row;
   flex-direction: row;
-  -webkit-flex-wrap: nowrap;
-  -ms-flex-wrap: nowrap;
   flex-wrap: nowrap;
-  -webkit-justify-content: space-between;
-  -ms-flex-pack: justify;
   justify-content: space-between;
-  -webkit-align-content: center;
-  -ms-flex-line-pack: center;
   align-content: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
   align-items: center;
   border-bottom: 1px solid #f5f5f5;
-  .mobile-title {
-    -webkit-order: 0;
-    -ms-flex-order: 0;
+  .column-1 {
     order: 0;
-    -webkit-flex: 0 1 auto;
-    -ms-flex: 0 1 auto;
     flex: 0 1 auto;
-    -webkit-align-self: center;
-    -ms-flex-item-align: center;
-    align-self: center;
-    font-weight: bold;
-    font-size: 1.25em;
-    padding-left: env(safe-area-inset-left);
-    padding-bottom: 12px;
-  }
-  .mobile-menu {
-    -webkit-order: 0;
-    -ms-flex-order: 0;
-    order: 0;
-    -webkit-flex: 0 1 auto;
-    -ms-flex: 0 1 auto;
-    flex: 2 1 auto;
-    -webkit-align-self: center;
-    -ms-flex-item-align: center;
-    align-self: center;
-    padding-right: env(safe-area-inset-left);
-    .menu-primary-container {
-      ul#menu-primary.menu {
-        list-style-type: none;
+    .mobile-title {
+      order: 0;
+      flex: 0 1 auto;
+      align-self: center;
+      padding-left: env(safe-area-inset-left);
+      padding-bottom: 12px;
+      padding-top: 12px;
+      h1 {
         margin: 0;
-        padding: 0;
-        overflow: hidden;
-        order: reverse;
-        float: right;
-        li {
-          float: right;
-          a {
-            display: block;
-            text-align: center;
-            padding: 0 5px;
+        padding: 6px;
+        font-size: 1.25em;
+        text-transform: uppercase;
+        border: 5px solid #335C81;
+        display: inline-block;
+        text-align: center;
+        color: #335C81;
+        a {
+          color: #335C81;
+          text-decoration: none;
+        }
+      }
+    }
+    .mobile-menu {
+      order: 0;
+      -webkit-flex: 0 1 auto;
+      flex: 2 1 auto;
+      align-self: center;
+      padding-right: env(safe-area-inset-left);
+      padding-bottom: 12px;
+      padding-top: 12px;
+      .menu-primary-container {
+        ul#menu-primary.menu {
+          list-style-type: none;
+          margin: 0;
+          padding: 0;
+          li {
+            float: left;
+            a {
+              display: block;
+              text-align: center;
+              padding: 0 5px;
+            }
           }
         }
+      }
+    }
+  }
+  .column-2 {
+    order: 1;
+    flex: 0 1 180px;
+    > .ad {
+      flex: 0 2 auto;
+      div {
+        text-align: right;
       }
     }
   }
