--- a/app/assets/scss/layout/_main.scss
+++ b/app/assets/scss/layout/_main.scss
@@ -10,22 +10,20 @@ html {
   //               "Droid Sans",
   //               "Helvetica Neue", 
   //               sans-serif; 
-  font-family: "Helvetica Neue",
+  font-family: "Roboto",
                sans-serif; 
-  // font-size: 14px;
-  font-size: 13px;
+  font-size: 15px;
   font-weight: 400;
   color: #222;
 }
 
 a {
-  color: #335C81;
+  color: #DE541E;
   text-decoration: none;
 }
 
 a:hover {
   text-decoration: underline;
-  transition-duration: 500ms;
 }
 
 body {
@@ -37,693 +35,7 @@ body {
   display: none;
 }
 
-// .hljs {
-//   padding: 0 !important;
-//   display: inline !important;
-//   background: none !important;
-// }
-
-.bar {
-  border-top: 4px solid #335C81;
-  height:1px;
+.part {
+  // future use
 }
-
-#infinite-footer {
-  width: 100%;
-  border-top: 1px solid;
-  border-color: #ccc;
-  border-color: rgba( 0, 0, 0, 0.1 );
-  background: rgba( 255, 255, 255, 0.9 );
-  .container {
-    background: none;
-    width: 100%;
-    border: 0;
-    margin: 0 auto;
-    padding: 5px 12px;
-    .blog-credits {
-      .pb-link {
-        .pb-small {
-          width: 14px;
-          height: 14px;
-          position: relative;
-          filter: grayscale(100%);
-          top: 1px;
-        }
-      }
-    }
-  }
-}
-
-.container {
-  max-width: 740px;
-  margin: 0 auto;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: center;
-  align-content: center;
-  align-items: flex-start;
-  .header,
-  .footer {
-    order: 0;
-    flex: 0 1 auto;
-    margin: 45px auto 30px auto;
-    .site-title {
-      margin-left: auto;
-      margin-right: auto;
-      width: 100%;
-      h1 {
-        margin: 0;
-        padding: 6px;
-        font-size: 1.25em;
-        text-transform: uppercase;
-        border: 5px solid #335C81;
-        display: inline-block;
-        text-align: center;
-        color: #335C81;
-        a {
-          color: #335C81;
-          &:hover {
-            text-decoration: none;
-          }
-        }
-      }
-    }
-    .footer-text {
-      text-align: center;
-      font-size: 12px;
-    }
-  }
-}
-
-.left {
-  order: 0;
-  flex: 1 0 180px;
-  align-self: stretch;
-  padding: 0;
-  margin-right:50px;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  justify-content: flex-start;
-  align-content: flex-start;
-  align-items: flex-start; 
-    .left-flex-child {
-    flex: 0 1 auto;
-    align-self: flex-end;
-    .custom-html-widget {
-      div#mc_embed_signup {
-        text-align: center;
-        border: 1px solid #aaa;
-        background-color: #eee;
-        padding: 10px;
-        #mc_embed_signup_scroll {
-          .email {
-            padding: 5px;
-            border: 1px solid #335C81;
-            width: 146px;
-            margin-bottom: 5px;
-          }
-          .button {
-            border: 1px solid #335C81;
-            background-color: #335C81;
-            padding: 5px;
-            color: white;
-          }
-        }
-      }
-    }
-  }
-  .title-box {
-    max-width: 200px;
-    width: 100%;
-    h1 {
-      margin-top: 0;
-    }
-    .intro {
-      font-size: 1em;
-      line-height: 1.4em;
-      .intro-image {
-        margin-left: auto;
-        margin-right: auto;
-        margin-bottom: 10px;
-        display: block;
-        width: 100%;
-        max-width: 150px;
-        img {
-          width: 100%;
-          max-width: 150px;
-          border-radius: 75px;
-          border: 1px solid #eee;
-        }
-      }
-      h1 {
-        margin: 0;
-        padding: 6px;
-        font-size: 1.25em;
-        text-transform: uppercase;
-        border: 5px solid #335C81;
-        display: inline-block;
-        text-align: center;
-        color: #335C81;
-        a {
-          color: #335C81;
-          &:hover {
-            text-decoration: none;
-          }
-        }
-      }
-    }
-  }
-  .widget {
-    margin: 15px 0;
-    line-height: 1.4em;
-    max-width: 180px;
-    width: 100%;
-    text-align: right;
-    h3 {
-      margin-bottom: 3px;
-      color: #666;
-      font-weight: 600;
-      font-size: 14px;
-    }
-    #sidebar-quote {
-      font-style: italic;
-    }   
-    .menu-primary-container {
-      display: block;
-      text-align: right;
-      ul#menu-primary.menu {
-        margin: 0 auto;
-        padding-left: 0;
-        list-style: none;
-      }
-    }
-    ul {
-      margin: 0 auto;
-      padding-left: 0;
-      list-style: none;
-    }
-  }
-  .searchform {
-    div {
-      input {
-        display: block;
-        padding: 5px;
-        margin-top: 12px;
-        width: 100%;
-      }
-      label {
-        display: none;
-      }
-    }
-  }
-  .widget_text {
-    text-align: right;
-  }
-}
-
-.right {
-  order: 1;
-  flex: 0 1 75%;
-  align-self: stretch;
-  padding-top: 15px;
-  padding-left: env(safe-area-inset-left);
-  padding-right: env(safe-area-inset-right);
-  .right-wrapper {
-    h1.page-title {
-      margin-top: 0;
-    } 
-    article.aside {
-      background: #fbfbfb;
-      border: solid 1px #ddd;
-      border-radius: 8px;
-      margin: 0 -12px 20px -12px;
-      padding: 12px;
-      div {
-        p:last-of-type {
-          margin-bottom: 0;
-        }
-      }
-      .meta {
-        margin-bottom: 0;
-      }
-    }
-    article.in-the-loop {
-      padding-bottom: 60px;
-    }
-    article {
-      padding-bottom: 10px;
-
-      .slim-entry {
-        display: -ms-flexbox;
-        display: -webkit-flex;
-        display: flex;
-        -webkit-flex-direction: row;
-        -ms-flex-direction: row;
-        flex-direction: row;
-        -webkit-flex-wrap: nowrap;
-        -ms-flex-wrap: nowrap;
-        flex-wrap: nowrap;
-        -webkit-justify-content: space-around;
-        -ms-flex-pack: distribute;
-        justify-content: space-around;
-        -webkit-align-content: center;
-        -ms-flex-line-pack: center;
-        align-content: center;
-        -webkit-align-items: stretch;
-        -ms-flex-align: stretch;
-        align-items: stretch;
-        .slim-entry-date {
-          -webkit-order: 1;
-          -ms-flex-order: 1;
-          order: 1;
-          -webkit-flex: 2 1 100px;
-          -ms-flex: 2 1 100px;
-          flex: 2 1 100px;
-          -webkit-align-self: stretch;
-          -ms-flex-item-align: stretch;
-          align-self: stretch;
-          text-align: left;
-        }
-        .slim-entry-title {
-          -webkit-order: 2;
-          -ms-flex-order: 2;
-          order: 2;
-          -webkit-flex: 2 1 648px;
-          -ms-flex: 2 1 648px;
-          flex: 4 1 648px;
-          -webkit-align-self: stretch;
-          -ms-flex-item-align: stretch;
-          align-self: stretch;
-          text-align: left;
-
-        }
-      }
-      h1 {
-        margin: 0 0 5px 0;
-        line-height: 1em;
-        a {
-          color: #1C2321;
-        }
-      }
-      .post-image {
-        img {
-          width: 100%;
-          max-width: 750px;
-          margin-bottom: 10px;
-          height: auto;
-        }
-      }
-      .meta {
-        color: #bbb;
-        font-size: 0.8rem;
-        margin-bottom: 10px;
-        .meta-child {
-          display: inline-block;
-          time {
-            a {
-              color: #bbb;
-            }
-          }
-          
-        }
-      }
-      .comments,
-      .related {
-        border-top: 1px solid #eee;
-        margin-top: 20px;
-        h3 {
-          font-size: 1em;
-        }
-        .mentions,
-        .likes {
-          .mention-list {
-            padding: 0;
-            .webmention {
-              &:first-of-type {
-                padding-left: 0;
-              }
-              .p-author {
-                .u-url {
-                  img {
-                    width: 32px;
-                    height: 32px;
-                  }
-                }
-              }
-            }
-          }
-        }
-        .commentlist {
-          list-style: none;
-          padding: 0;
-          margin: 0;
-          li.comment {
-            margin-bottom: 5px;
-            padding-top: 20px;
-            padding-bottom: 20px;
-            .comment-body {
-              .comment-author {
-                cite {
-                  font-weight: bold;
-                  font-style: normal;
-                }
-                .says {
-                  display: none;
-                }
-                .avatar {
-                  display: none;
-                }
-              }
-            }
-          }
-        }
-        .comment-respond {
-          border-top: 1px solid #eee;
-          .comment-form {
-            p.comment-notes {
-              font-size: 0.85em;
-              color: #888;
-              font-style: italic;
-            }
-            p.comment-form-comment {
-              font-size: 0.9em;
-              label {
-                display: block;
-              }
-              textarea {
-                width: 100%;
-                border: 1px solid #eee;
-                font-family: monospace;
-                font-size: 14px;
-                padding: 5px;
-                color: #666;
-              }
-            }
-            p.comment-form-author,
-            p.comment-form-email,
-            p.comment-form-url {
-              display: inline-block;
-              width: 100%;
-              margin: 5px 0;
-              label {
-                display: inline-block;
-                min-width: 75px;
-              }
-              input {
-                border: 1px solid #eee;
-                font-family: monospace;
-                font-size: 14px;
-                padding: 5px;
-                color: #666;
-              }
-            }
-          }
-        }
-      }
-      > table {
-        border-spacing: 0px;
-        border-collapse: collapse;
-        width: 100%;
-        max-width: 100%;
-        margin-bottom: 15px;
-        background-color: transparent;
-        text-align: left;
-        border-left: 1px solid #eee;
-        border-right: 1px solid #eee;
-        th {
-          font-weight: bold;
-          border: 1px solid #eee;
-          padding: 8px;
-        }
-        td {
-          border: 1px solid #eee;
-          padding: 8px;
-        }
-        tr {
-          background-color: transparent;
-          &:nth-of-type(2n+1) {
-            background-color: #fafafa;
-          }
-          th {
-            background-color: #f0f0f0;
-          }
-          border-top: 1px solid #eee;
-          border-bottom: 1px solid #eee;
-        }
-        th, td {
-          border: none;
-        }
-      }
-      
-      hr {
-        margin: 20px auto;
-        width: 100%;
-        background-color: #eee;
-        height: 1px;
-        border: 0;
-      }
-      pre {
-        border-radius: 2px;
-        white-space: pre-wrap;
-        line-break: strict;
-        code {
-          font-size: 0.95em;
-        }
-      }
-      line-height: 1.4em;
-      p {
-        &:first-of-type {
-          margin-top: 0;
-        }
-
-        line-height: 1.8em;
-        img {
-          max-width: 100%;
-          height: auto;
-        }
-        code {
-          background-color: #f5f5f5;
-          border: 1px solid #e0e0e0;
-          border-radius: 2px;
-          padding: 2px;
-          font-size: 0.95em;
-        }
-      }
-      iframe,
-      video {
-        width: 100%;
-        max-width: 750px;
-      }
-      blockquote {
-        margin: 0 0.5em;
-        background-color: #fafafa;
-        border: 1px solid #f5f5f5;
-        padding: 0.5em 1em;
-        p:first-child:before {
-          font-family: "Font Awesome 5 Pro";
-          content: "\f10d";
-          color: #335C81;
-          font-size: 16px;
-          padding-top: 0px;
-          padding-right: 5px;
-          margin: 0em;
-          font-style: normal;
-        }
-        p:last-child:after {
-          font-family: "Font Awesome 5 Pro";
-          content: "\f10e";
-          color: #335C81;
-          font-size: 16px;
-          padding-top: 0px;
-          padding-left: 5px;
-          margin: 0em;
-          font-style: normal;
-        }
-        p {
-          font-style: italic;
-          margin-bottom: 0;
-        }
-      }
-      ol,ul {
-        padding-left: 1.3em;
-        li {
-          margin-bottom: 0.25em;
-          line-height: 1.4em;
-          code {
-            background-color: #f5f5f5;
-            border: 1px solid #e0e0e0;
-            border-radius: 2px;
-            padding: 2px;
-            font-size: 0.95em;
-          }
-        }
-      }
-      section.footnotes {
-        ol.footnotes-list {
-          padding-left: 1.3em;
-          li {
-            p {
-              margin: 0;
-              line-height: 1.4;
-            }
-          }
-        }
-      }
-    }
-
-    div.after-post-widgets {
-      padding-bottom: 20px;
-      line-height: 1.4;
-      .apw-widget {
-        border: 1px solid #aaa;
-        padding: 7px 20px 20px 20px;
-        background-color: #eee;
-        .custom-html-widget {
-          div#mc_embed_signup {
-            text-align: center;
-            #mc_embed_signup_scroll {
-              .email {
-                padding: 5px;
-                border: 1px solid #335C81;
-                width: 200px;
-                margin: 1em;
-              }
-              .button {
-                border: 1px solid #335C81;
-                background-color: #335C81;
-                padding: 5px;
-                color: white;
-              }
-            }
-          }
-        }
-      }
-    }
-    
-    hr {
-      margin-top: 0px;
-      margin-bottom: 40px;
-      background-color: #eee;
-      height: 1px;
-      border: 0;
-    }
-    div.hey-look {
-      margin: 20px 0;
-      width: 100%;
-      text-align: center;
-      font-size: 0.9em;
-      font-style: italic;
-    }
-    div.pagination {
-      display: flex;
-      flex-direction: row;
-      flex-wrap: nowrap;
-      justify-content: center;
-      align-content: space-between;
-      align-items: center;
-      .later {
-        order: 0;
-        flex: 1 0 33%;
-        align-self: center;
-        text-align: left;
-      }
-      .count {
-        order: 0;
-        flex: 1 0 33%;
-        align-self: center;
-        text-align: center;
-      }
-      .earlier {
-        order: 0;
-        flex: 1 0 33%;
-        align-self: center;
-        text-align: right;
-      }
-    }
-  }
-}
-
-.post-template {
-
-  main {
-    margin-top: 4rem;
-  }
-}
-.mobile-header {
-  padding-top: 12px;
-  padding-bottom: 12px;
-  padding-left: env(safe-area-inset-left);
-  padding-right: env(safe-area-inset-right);
-  padding-left: 12px;
-  padding-right: 12px;
-  min-height: 50px;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: space-between;
-  align-content: center;
-  align-items: center;
-  border-bottom: 1px solid #f5f5f5;
-  .column-1 {
-    order: 0;
-    flex: 0 1 auto;
-    .mobile-title {
-      order: 0;
-      flex: 0 1 auto;
-      align-self: center;
-      padding-left: env(safe-area-inset-left);
-      padding-bottom: 12px;
-      padding-top: 12px;
-      h1 {
-        margin: 0;
-        padding: 6px;
-        font-size: 1.25em;
-        text-transform: uppercase;
-        border: 5px solid #335C81;
-        display: inline-block;
-        text-align: center;
-        color: #335C81;
-        a {
-          color: #335C81;
-          text-decoration: none;
-        }
-      }
-    }
-    .mobile-menu {
-      order: 0;
-      -webkit-flex: 0 1 auto;
-      flex: 2 1 auto;
-      align-self: center;
-      padding-right: env(safe-area-inset-left);
-      padding-bottom: 12px;
-      padding-top: 12px;
-      .menu-primary-container {
-        ul#menu-primary.menu {
-          list-style-type: none;
-          margin: 0;
-          padding: 0;
-          li {
-            float: left;
-            a {
-              display: block;
-              text-align: center;
-              padding: 0 5px;
-            }
-          }
-        }
-      }
-    }
-  }
-  .column-2 {
-    order: 1;
-    flex: 0 1 180px;
-    > .ad {
-      flex: 0 2 auto;
-      div {
-        text-align: right;
-      }
-    }
-  }
-}
+// see _content.scss, _footer.scss, and _header.scss for body parts
