--- a/app/assets/scss/layout/_header.scss
+++ b/app/assets/scss/layout/_header.scss
@@ -32,7 +32,6 @@
     text-align: center;
     width: 100%;
     height: 50px;
-    background-color: #333;
     .menu-primary-container {
       ul#menu-primary.menu {
         list-style-type: none;
@@ -46,14 +45,9 @@
             display: block;
             text-align: center;
             padding: 0 20px;
-            color: #fff;
+            color: #333;
             height: 100%;
             line-height: 50px;
-            &:hover {
-              background-color: #666;
-              color: #fff;
-              text-decoration: none;
-            }
           }
         }
       }
