--- a/app/assets/scss/layout/_main.scss
+++ b/app/assets/scss/layout/_main.scss
@@ -1,24 +1,24 @@
 html {
-  // font-family: -apple-system, 
-  //               BlinkMacSystemFont, 
-  //               "Segoe UI", 
-  //               Roboto, 
-  //               Oxygen,
-  //               Ubuntu,
-  //               Cantarell,
-  //               "Fira Sans",
-  //               "Droid Sans",
-  //               "Helvetica Neue", 
-  //               sans-serif; 
-  font-family: "Roboto",
-               sans-serif; 
-  font-size: 15px;
+  font-family: -apple-system, 
+                BlinkMacSystemFont, 
+                "Segoe UI", 
+                Roboto, 
+                Oxygen,
+                Ubuntu,
+                Cantarell,
+                "Fira Sans",
+                "Droid Sans",
+                "Helvetica Neue", 
+                sans-serif; 
+  // font-family: "Roboto",
+  //              sans-serif; 
+  font-size: 14px;
   font-weight: 400;
-  color: #222;
+  color: #223843;
 }
 
 a {
-  color: #DE541E;
+  color: #0E6BA8;
   text-decoration: none;
 }
 
